...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Card Title -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/customerInfo_label"
            style="@style/Woo.Card.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/minor_00"
            android:layout_marginEnd="@dimen/minor_00"
            android:layout_marginTop="@dimen/minor_00"
...
                <View
                    style="@style/Woo.Divider"
                    android:layout_marginStart="@dimen/major_100"
                    android:layout_marginEnd="@dimen/minor_00" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/customerInfo_shippingLabel"
                    style="@style/Woo.Card.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/minor_50"
                    android:text="@string/orderdetail_shipping_details" />

                <com.woocommerce.android.widgets.WCActionableEmptyLabel
                    android:id="@+id/customerInfo_shippingAddr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <!-- Label: Shipping method -->
            <LinearLayout
                android:id="@+id/customerInfo_shippingMethodSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:orientation="vertical"
                android:visibility="visible"
                tools:visibility="visible">
...
            </LinearLayout>

        </LinearLayout>

        <!-- Billing Section -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/customerInfo_morePanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Label: Billing Details -->
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/customerInfo_billingLabel"
                    style="@style/Woo.Card.Title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/orderdetail_billing_details"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/customerInfo_divider" />

                <!-- Billing Address -->
                <com.woocommerce.android.widgets.WCActionableEmptyLabel
                    android:id="@+id/customerInfo_billingAddr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/minor_50"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/customerInfo_billingLabel" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Divider -->
            <View
                android:id="@+id/customerInfo_divider2"
                style="@style/Woo.Divider"
                android:layout_marginStart="@dimen/major_100"
                android:layout_marginTop="@dimen/major_100"
                android:layout_marginEnd="@dimen/minor_00"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/customerInfo_billingAddressSection" />

            <!-- Billing Phone -->
            <com.woocommerce.android.widgets.WCSelectableTextView
                android:id="@+id/customerInfo_phone"
                style="@style/Woo.Card.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toTopOf="@+id/customerInfo_divider3"
                app:layout_constraintEnd_toStartOf="@+id/customerInfo_callOrMessageBtn"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/customerInfo_divider2"
                tools:text="123-456-7890" />

            <!-- Call or message button -->
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/customerInfo_callOrMessageBtn" />

            <!-- Email Address -->
            <com.woocommerce.android.widgets.WCSelectableTextView
                android:id="@+id/customerInfo_emailAddr"
                style="@style/Woo.Card.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/customerInfo_emailBtn"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/customerInfo_divider3"
                tools:text="email@example.com" />

            <!-- Email Button -->
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/customerInfo_divider3" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- VIEW MORE Button -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/customerInfo_viewMore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/orderdetail_show_billing"
            android:focusable="true"
            android:orientation="horizontal"
            tools:visibility="visible">

            <View
                android:id="@+id/customerInfo_divider4"
                style="@style/Woo.Divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/customerInfo_viewMoreButtonTitle"
                style="@style/Woo.Button.TextButton.TextStart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:focusable="false"
...
